browse photo mobile device

--- a/web/manage/logs.html
+++ b/web/manage/logs.html
@@ -28,7 +28,7 @@
                         <a href="index.html" class="logo">
                             <img src="../images/Eyedeea_Photos_m_logo.png" width="10%" alt="Eyedeea Photos Logo"
                                 style="vertical-align: middle;" />
-                            <h2 style="display: inline;vertical-align: middle;">Eyedeea Photos - System</h2>
+                            <h2 style="display: inline;vertical-align: middle;">Eyedeea Photos - Logs</h2>
                         </a>
                     </div>
                     <ul class="icons" style="width:30%;">
@@ -41,8 +41,7 @@
                 <!-- Content -->
                 <div style="height: 10px;"></div>
                 <div class="col-12">
-                    <div class="header">
-                        <h3 style="margin: 0;">System Logs</h3>
+                    <div class="header">                       
                         <p id="system_summary" style="margin: 0;font-weight:bold;">System Logs</p>
                     </div>
 
