--- a/web/manage/player.html
+++ b/web/manage/player.html
@@ -115,7 +115,7 @@
                         <tr>
                             <th>Name</th>
                             <th>Keywords</th>
-                            <th>Total Photos</th>
+                            <th>Photos</th>
                         </tr>
                     </thead>
                     <tbody id="player-filter-table-body">
