--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="assets/css/main.css" />
     <style>
         #title {
-            font-size: 1.25vw;
-            padding-bottom: 0.75vw;
+            font-size: clamp(16px, 1.25vw, 24px);
+            padding-bottom: clamp(5px, 0.75vw, 12px);
             display: inline-flex;
             align-items: center;
         }
