--- a/web/manage/logs.html
+++ b/web/manage/logs.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/search.css" />
     <style> .header {
         display: flex;
         align-items: center;
@@ -31,11 +33,11 @@
                             <h2 style="display: inline;vertical-align: middle;">Eyedeea Photos - Logs</h2>
                         </a>
                     </div>
-                    <ul class="icons" style="width:30%;">
+                    <ul class="icons">
                         <li><a href="https://github.com/eyedia/EyedeeaPhotos" target="_blank"
-                                class="icon brands fa fa-github"><span class="label">Git Hub</span></a></li>
+                            class="fa-icon fa fa-github"></a></li>
                         <li><a href="https://eyedeeaphotos.eyediatech.com/" target="_blank"
-                                class="icon brands fa fa-globe"><span class="label">Eyedeea Website</span></a></li>
+                            class="fa-icon fa fa-globe"></a></li>
                     </ul>
                 </header>
                 <!-- Content -->
