--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/search.css" />
     <style>
         #title {
             font-size: clamp(16px, 1.25vw, 24px);
@@ -36,9 +38,9 @@
                     </div>
                     <ul class="icons">
                         <li><a href="https://github.com/eyedia/EyedeeaPhotos" target="_blank"
-                                class="icon brands fa fa-github"><span class="label">Git Hub</span></a></li>
+                            class="fa-icon fa fa-github"></a></li>
                         <li><a href="https://eyedeeaphotos.eyediatech.com/" target="_blank"
-                                class="icon brands fa fa-globe"><span class="label">Eyedeea Website</span></a></li>
+                            class="fa-icon fa fa-globe"></a></li>
                     </ul>
                 </header>
                 <!-- Content -->
