--- a/web/manage/player.html
+++ b/web/manage/player.html
@@ -73,6 +73,7 @@
             top: 20px;
             right: 20px;
         }
+        
     </style>
 </head>
 
@@ -87,7 +88,7 @@
 
                 <!-- Header -->
                 <header id="header">
-                    <div style="display: table;">
+                    <div class="eyedeea-header">
                         <a href="index.html" class="logo">
                             <img src="../images/Eyedeea_Photos_m_logo.png" width="10%" alt="Eyedeea Photos Logo"
                                 style="vertical-align: middle;" />
