--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -29,7 +29,7 @@
 
                 <!-- Header -->
                 <header id="header">
-                    <div style="display: table;">
+                    <div class="eyedeea-header">
                         <a href="index.html" class="logo">
                             <img src="../images/Eyedeea_Photos_m_logo.png" width="10%" alt="Eyedeea Photos Logo"
                                 style="vertical-align: middle;" />
