--- a/web/manage/logs.html
+++ b/web/manage/logs.html
@@ -28,9 +28,9 @@
                 <header id="header">
                     <div class="eyedeea-header">
                         <a href="index.html" class="logo">
-                            <img src="../images/Eyedeea_Photos_m_logo.png" width="10%" alt="Eyedeea Photos Logo"
-                                style="vertical-align: middle;" />
-                            <h2 style="display: inline;vertical-align: middle;">Eyedeea Photos - Logs</h2>
+                            <img/>
+                            <h2>Eyedeea Photos</h2>
+                            <h3>Logs</h3>
                         </a>
                     </div>
                     <ul class="icons">
