--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -31,9 +31,9 @@
                 <header id="header">
                     <div class="eyedeea-header">
                         <a href="index.html" class="logo">
-                            <img src="../images/Eyedeea_Photos_m_logo.png" width="10%" alt="Eyedeea Photos Logo"
-                                style="vertical-align: middle;" />
-                            <h2 style="display: inline;vertical-align: middle;">Eyedeea Photos - Source Settings</h2>
+                            <img/>
+                            <h2>Eyedeea Photos</h2>
+                            <h3>Source Settings</h3>
                         </a>
                     </div>
                     <ul class="icons">
