--- a/web/manage/index.html
+++ b/web/manage/index.html
@@ -110,10 +110,8 @@
                                 </div>
                            
                         </div>
-                    </section>
-
-                   
-                    <button class="close-btn" onclick="document.getElementById('dialog').close()">✖</button>
+                    </section>                   
+                    <button class="close-btn" onclick="document.getElementById('dialog').close()">&times;</button>
                 </dialog>
             </div>
         </div>
