--- a/web/manage/player.html
+++ b/web/manage/player.html
@@ -166,6 +166,7 @@
                             <a id="createFilter" href="#" onclick="saveFilter()" class="button primary fit small icon solid fa-save">Save
                                 Filter</a>
                         </div>
+                        <div style="height: 40px;"></div>
                     </div>
                 </dialog>
                 <!-- Add New Filter -->
