--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,16 @@
 
 <body class="fullscreen is-preload-0 is-preload-1 is-preload-2">
 
+	<!-- Loading overlay -->
+    <div id="loading-overlay" style="
+        position:fixed; inset:0; display:flex; align-items:center; justify-content:center;
+        background:#000; color:#fff; z-index:10000; transition:opacity .3s ease;
+        font-family: Arial, sans-serif;">
+        <div style="text-align:center">
+            <div style="font-size:18px; opacity:.9; margin-bottom:20px;">Loading photos...</div>
+            <div style="font-size:12px; opacity:.6;">Please wait</div>
+        </div>
+    </div>
 	<!-- Main -->
 	<div id="main">
 
