--- a/web/index.html
+++ b/web/index.html
@@ -18,75 +18,74 @@
 <body class="fullscreen is-preload-0 is-preload-1 is-preload-2">
 
 	<!-- Loading overlay -->
-    <div id="loading-overlay" style="
+	<div id="loading-overlay" style="
         position:fixed; inset:0; display:flex; align-items:center; justify-content:center;
         background:#000; color:#fff; z-index:10000; transition:opacity .3s ease;
         font-family: Arial, sans-serif;">
-        <div style="text-align:center">
-            <div style="font-size:18px; opacity:.9; margin-bottom:20px;">Loading photos...</div>
-            <div style="font-size:12px; opacity:.6;">Please wait</div>
-        </div>
-    </div>
+		<div style="text-align:center">
+			<div style="font-size:18px; opacity:.9; margin-bottom:20px;">Loading photos...</div>
+			<div style="font-size:12px; opacity:.6;">Please wait</div>
+		</div>
+	</div>
 	<!-- Main -->
 	<div id="main">
 
-		<!-- Header -->
-		<header id="header">
-			<img src="/images/Eyedeea_Photos_m_logo.png" title="Eyedeea Photos" width="50">
-			<h2>Eyedeea Photos</h2>
-			<h3>Rediscover the Moments You Forgot.</h3>
-			<section>
-				<hr>				
-				<a href="/manage" >Manage</a>
-			</section>
-			
-		</header>
+		<!-- Configuration Menu(Right) -->
+		<div id="configNav" class="config-container">
+			<div class="center-wrapper">
+				<a href="/manage">
+					<img src="./images/manage.png" class="main-image" title="Configuration" alt="Configuration">
+				</a>
+			</div>
+			<img src="./assets/css/images/arrow.svg" class="close-btn" alt="Close" title="Close"
+				onclick="closeConfigNav()">
+		</div>
 
 		<!-- Thumbnail -->
 		<section id="thumbnails">
-			<article  id="article-00">
+			<article id="article-00">
 				<a id="a-00" class="thumbnail" href="api/view?photo_index=0"><img id="img-00"
 						src="api/view?photo_index=0" alt="" /></a>
 				<h2 id="title-00">Memories</h2>
 				<h3 id="sub-title-00">It's all about the journey</h3>
 				<p id="sub-sub-title-00">Eyedeea Photos</p>
 			</article>
-			<article  id="article-01">
+			<article id="article-01">
 				<a id="a-01" class="thumbnail" href="api/view?photo_index=1" data-position="left center"><img
 						id="img-01" src="api/view?photo_index=1" alt="" /></a>
 				<h2 id="title-01">Memories</h2>
 				<h3 id="sub-title-01">It's all about the journey</h3>
 				<p id="sub-sub-title-01">Eyedeea Photos</p>
 			</article>
-			<article  id="article-02">
+			<article id="article-02">
 				<a id="a-02" class="thumbnail" href="api/view?photo_index=2"><img id="img-02"
 						src="api/view?photo_index=2" alt="" /></a>
 				<h2 id="title-02">Memories</h2>
 				<h3 id="sub-title-02">It's all about the journey</h3>
 				<p id="sub-sub-title-02">Eyedeea Photos</p>
 			</article>
-			<article  id="article-03">
+			<article id="article-03">
 				<a id="a-03" class="thumbnail" href="api/view?photo_index=3" data-position="top center"><img id="img-03"
 						src="api/view?photo_index=3" alt="" /></a>
 				<h2 id="title-03">Memories</h2>
 				<h3 id="sub-title-03">It's all about the journey</h3>
 				<p id="sub-sub-title-03">Eyedeea Photos</p>
 			</article>
-			<article  id="article-04">
+			<article id="article-04">
 				<a id="a-04" class="thumbnail" href="api/view?photo_index=4"><img id="img-04"
 						src="api/view?photo_index=4" alt="" /></a>
 				<h2 id="title-04">Memories</h2>
 				<h3 id="sub-title-04">It's all about the journey</h3>
 				<p id="sub-sub-title-04">Eyedeea Photos</p>
 			</article>
-			<article  id="article-05">
+			<article id="article-05">
 				<a id="a-05" class="thumbnail" href="api/view?photo_index=5" data-position="top center"><img id="img-05"
 						src="api/view?photo_index=5" alt="" /></a>
 				<h2 id="title-05">Memories</h2>
 				<h3 id="sub-title-05">It's all about the journey</h3>
 				<p id="sub-sub-title-05">Eyedeea Photos</p>
 			</article>
-			<article  id="article-06">
+			<article id="article-06">
 				<a id="a-06" class="thumbnail" href="api/view?photo_index=6"><img id="img-06"
 						src="api/view?photo_index=6" alt="" /></a>
 				<h2 id="title-06">Memories</h2>
