--- a/web/manage/photos.html
+++ b/web/manage/photos.html
@@ -106,11 +106,13 @@
                 <!-- Header -->
                 <header id="header">
                     <div class="eyedeea-header">
-                        <a href="index.html" class="logo">
-                            <img/>
+                        <a href="index.html" class="logo">                           
                             <h2>Eyedeea Photos</h2>
                             <h3>Search & Browse</h3>
                         </a>
+                    </div>
+                    <div class="slideshow">
+                        <img src="../images/slideshow.jpg" id="img_slideshow" alt="Back to Slide Show" class="image" href="#" title="Go back to slide show" />
                     </div>
                     <ul class="icons">
                         <li><a href="https://github.com/eyedia/EyedeeaPhotos" target="_blank"
@@ -195,7 +197,8 @@
                 <!-- Menu -->
                 <nav id="menu">
                     <header class="major">
-                        <h2><a href="../">Eyedeea Photos</a></h2>
+                        <h2><a href="../">Eyedeea Photos</a></h2>                        
+                        <img src="../images/slideshow.png" id="img_slideshow_nav" alt="Back to Slide Show" class="image" style="cursor: pointer;" title="Go back to slide show" />                        
                     </header>
                     <ul>
                         <li><a href="index.html">System</a></li>
