--- a/web/index.html
+++ b/web/index.html
@@ -142,18 +142,18 @@
 			<i class="large material-icons">photo</i>
 		</a>
 		<ul>
-			<li><a id="mt_trash_it" class="btn-floating tooltipped red" data-tooltip="(T)rash it"
-					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">delete</i></a></li>
+			<!-- <li><a id="mt_trash_it" class="btn-floating tooltipped red" data-tooltip="(T)rash it"
+					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">delete</i></a></li> -->
 			<li><a id="mt_mark_it" class="btn-floating tooltipped blue" data-tooltip="(M)ark it"
 					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">bookmark</i></a></li>
 
-			<li><a id="mt_incorrect_location" class="btn-floating tooltipped purple" data-tooltip="Incorrect Lo(c)ation"
+			<!-- <li><a id="mt_incorrect_location" class="btn-floating tooltipped purple" data-tooltip="Incorrect Lo(c)ation"
 					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">edit_location</i></a></li>
 			<li><a id="mt_incorrect_date" class="btn-floating tooltipped purple" data-tooltip="Incorrect (D)ate"
 					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">date_range</i></a></li>
 
 			<li><a id="mt_dont_show" class="btn-floating tooltipped red" data-tooltip="Dont (S)how"
-					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">do_not_disturb</i></a></li>
+					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">do_not_disturb</i></a></li> -->
 			<li><a id="mt_download" class="btn-floating tooltipped green" data-tooltip="(D)ownload"
 					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">download</i></a></li>
 
