--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
         background:#000; color:#fff; z-index:10000; transition:opacity .3s ease;
         font-family: Arial, sans-serif;">
 		<div style="text-align:center">
-			<div style="font-size:18px; opacity:.9; margin-bottom:20px;">Loading photos...</div>
+			<div style="font-size:18px; opacity:.9; margin-bottom:20px;">Loading Eyedeea Photos...</div>
 			<div style="font-size:12px; opacity:.6;">Please wait</div>
 		</div>
 	</div>
