--- a/web/manage/player.html
+++ b/web/manage/player.html
@@ -131,7 +131,7 @@
                 </table>
 
                 <!-- Add New Filter -->
-                <dialog id="dialog" style="height: 100vw;">
+                <dialog id="dialog">
                     <div class="col-6 col-12-xsmall">
                         <h3>Add New Player Filter</h3>
                     </div>
