slideshow icon size fixes

--- a/web/manage/player.html
+++ b/web/manage/player.html
@@ -96,7 +96,7 @@
                         </a>
                     </div>
                     <div class="slideshow">
-                        <img src="../images/slideshow.jpg" id="img_slideshow" alt="Back to Slide Show" class="image" href="#" title="Go back to slide show" />
+                        <img src="../images/slideshow.jpg" id="img_slideshow" alt="Back to Slide Show" class="slideshow-header-img" href="#" title="Go back to slide show" />
                     </div>
                     <ul class="icons">
                         <li><a href="https://github.com/eyedia/EyedeeaPhotos" target="_blank"
@@ -192,7 +192,7 @@
                 <nav id="menu">
                     <header class="major">
                         <h2><a href="../">Eyedeea Photos</a></h2>                        
-                        <img src="../images/slideshow.png" id="img_slideshow_nav" alt="Back to Slide Show" class="image" style="cursor: pointer;" title="Go back to slide show" />                        
+                        <img src="../images/slideshow.png" id="img_slideshow_nav" alt="Back to Slide Show" class="slideshow-nav-img" title="Go back to slide show" />
                     </header>
                     <ul>
                         <li><a href="index.html">System</a></li>
