--- a/web/manage/photos.html
+++ b/web/manage/photos.html
@@ -199,14 +199,10 @@
                 </section>
 
                 <!-- Menu -->
-                <nav id="menu">
-                    <header class="major">
-                        <h2><a href="../">Eyedeea Photos</a></h2>                        
-                        <img src="../images/slideshow.png" id="img_slideshow_nav" alt="Back to Slide Show" class="slideshow-nav-img" title="Go back to slide show" />
-                    </header>
+                <nav id="menu">                    
                     <ul>
                         <li><a href="index.html">System</a></li>
-                        <li><a href="player.html">Player Settings</a></li>
+                        <li><a href="player.html">Filters</a></li>
                         <li><a href="photos.html">Photos</a></li>
                         <li>
                             <span id="nav_sources_ctr" class="opener active">Sources</span>
