--- a/web/index.html
+++ b/web/index.html
@@ -162,6 +162,7 @@
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/browser.min.js"></script>
 	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/logger.js"></script>
 	<script src="assets/js/main.js"></script>
 	<script src="assets/js/materialize.min.js"></script>
 	<script src="assets/js/eyedeea_client.js"></script>
